[package]
name = "rust-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
diesel = "1.4.7"
env_logger = "0.9.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde = "1.0.126"
serde_json = "1.0.64"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
actix = "0.11.0-beta.2"
actix-web = "4.0.0-beta.3"
actix-rt = "2.0.2"